sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:10: error: not found: value i
    i=0
    ^AlgCombSort:11: error: not found: value i
     while(i+ecart<lgr){
           ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+ecart,i)){
                    ^AlgCombSort:12: error: not found: value i
      if (plusPetit(i+ecart,i)){
                            ^AlgCombSort:13: error: not found: value i
        echange(i+ecart,i)
                ^AlgCombSort:13: error: not found: value i
        echange(i+ecart,i)
                        ^AlgCombSort:15: error: not found: value i
       i+=1
       ^